@@ -3,27 +3,46 @@ use strict;
 use warnings;
 
 my $build = Module::Build->new(
-	module_name => 'Math::Polynomial::Solve',
 	abstract => 'Find the Roots of Polynomial Equations',
-	dist_author => 'John M. Gamble <jgamble@cpan.org>',
-	dist_version_from => 'lib/Math/Polynomial/Solve.pm',  
+	author => 'John M. Gamble <jgamble@cpan.org>',
+	name => 'Math::Polynomial::Solve',
+	version => 'lib/Math/Polynomial/Solve.pm',
+	release_status => 'testing',
+	license => ['perl_5'],
 
-	requires => {
-		perl=> '5.6.0',
-		'Math::Complex'=> '1.36',  # Bugfix of Im().
+	prereqs => {
+		runtime => {
+			requires => {
+				perl=> '5.008',
+				'Math::Complex'=> '1.36',  # Bugfix of Im().
+			},
+		},
+
+		test => {
+			requires => {
+				'Test::Simple' => 0
+			},
+	},
+	resources => {
+		repository => {
+			url => 'git://github.com/jgamble/Math-Polynomial-Solve.git',
+			web => 'https://github.com/jgamble/Math-Polynomial-Solve',
+			type => 'git',
+		}
 	},
 
-	build_requires => { 'Test::Simple' => 0 },
-
-	license => 'perl',
+	dynamic_config => 0,
 	create_readme => 0,
 	create_makefile_pl => 'traditional',
-	meta_merge => {
-		keyword => [ qw(math polynomial solve roots
+
+	keywords => [ qw(math polynomial solve roots
 				quadratic cubic quartic matrix
 				derivative antiderivative Nickalls Ferrari
 				Laguerre Newton-Raphson Sturm Hessenberg
 			) ],
+
+	meta_spec => {
+		version => x.xx,
 	},
 );
 
